force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Director GR Approval</fullName>
                <label>SDGR Approval</label>
            </value>
            <value>
                <fullName>GRS Review</fullName>
            </value>
            <value>
                <fullName>Dean approval</fullName>
                <label>Chair BGR approval</label>
            </value>
            <value>
                <fullName>GRS Processing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>