force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Student__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kept in sync with the student lookup on the GRE. Used for email alerts that fire from this object.</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointment of Examiners (Student)</relationshipLabel>
    <relationshipName>Appointment_of_Examiners</relationshipName>
    <type>Lookup</type>
</CustomField>