force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Student_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Id__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Student__r.I_RS_Student_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Id</label>
    <type>Text</type>
</CustomField>