force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Supervisor_Declaration__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree</label>
    <type>Checkbox</type>
</CustomField>