force-app/main/default/objects/Appointment_of_Examiner__c/fields/I_RS_Supervisor_Declaration_Text__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Declaration_Text__c</fullName>
    <formula>&quot;I have consulted with the candidate to ascertain there are no conflicts of interest or other barriers with any potential examiners.&quot;+
BR()+
&quot;I have declared any potential or perceived conflicts of interest and / or areas where the proposed examiners don’t meet the standard qualifications for examiners.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Declaration</label>
    <type>Text</type>
</CustomField>