force-app/main/default/objects/Appointment_of_Examiner__c/validationRules/Only_GRS_can_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_GRS_can_edit</fullName>
    <active>true</active>
    <errorConditionFormula>$User.I_RS_Is_Researcher_User__c = &quot;1&quot;
&amp;&amp;
!ISCHANGED(I_RS_Status__c)
&amp;&amp;
TEXT(I_RS_Status__c) &lt;&gt; &quot;Draft&quot;</errorConditionFormula>
    <errorMessage>This form has been submitted so can’t be edited. Please contact GRS.</errorMessage>
</ValidationRule>