force-app/main/default/objects/Appointment_of_Examiner__c/listViews/I_RS_GRS_Queue_Appointment_of_Examiner.listView-meta.xml
<ListView>
    <fullName>I_RS_GRS_Queue_Appointment_of_Examiner</fullName>
    <filterScope>Queue</filterScope>
    <label>GRS Queue</label>
    <queue>I_RS_GRS_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>